--- a/public/index.css
+++ b/public/index.css
@@ -95,14 +95,24 @@ tr:nth-child(odd) {
 
 .credentials {
   display: flex;
-  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: stretch;
+  flex-wrap: wrap;
 }
 
 .fields {
   display: flex;
+  margin: 1%;
+  justify-content: center;
+  border-bottom: 1px solid #222;
 }
 
 .fieldnames {
+  padding: 0 10px;
   color: #fafafa;
   background-color: #222;
+}
+
+.fieldContent {
+  padding: 0 10px;
 }
