--- a/public/index.css
+++ b/public/index.css
@@ -145,3 +145,9 @@ tr:nth-child(odd) {
 .colFields {
   text-align: left;
 }
+
+.reverseFieldManag {
+  display: flex;
+  flex-direction: column-reverse;
+  flex-wrap: nowrap;
+}
