Added symbols for the sorting

--- a/public/index.css
+++ b/public/index.css
@@ -41,6 +41,10 @@ body {
   background-color: #222;
 }
 
+.results_headers span {
+  float: right;
+}
+
 .results_headers:hover {
   cursor: pointer;
 }
